--- a/backend/.env.template
+++ b/backend/.env.template
@@ -6,3 +6,4 @@ JWT_SECRET=supersecret
 COOKIE_SECRET=supersecret
 DATABASE_URL=postgres://postgres@localhost/$DB_NAME
 DB_NAME=c.v.o.s
+PUBLIC_MEDUSA_BACKEND_URL=http://localhost:9000
