--- a/storefront/.env.template
+++ b/storefront/.env.template
@@ -12,3 +12,12 @@ NEXT_PUBLIC_DEFAULT_REGION=us
 
 # Your Next.js revalidation secret. See – https://nextjs.org/docs/app/building-your-application/data-fetching/fetching-caching-and-revalidating#on-demand-revalidation
 REVALIDATE_SECRET=supersecret
+
+NEXT_PUBLIC_STRIPE_KEY=pk_test
+
+NEXT_PUBLIC_PAYPAL_CLIENT_ID=test
+
+GOOGLE_CLIENT_ID=826859420779-85t78gc87dr3fvlmosn5ts2ef3364i2c.apps.googleusercontent.com
+
+GOOGLE_CLIENT_SECRET=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
+
