--- a/storefront/package.json
+++ b/storefront/package.json
@@ -2,7 +2,7 @@
   "name": "medusa-next",
   "version": "1.0.3",
   "private": true,
-  "author": "Riqwan Thamir <riqwan@medusajs.com> & Victor Gerbrands <victor@medusajs.com> (https://www.medusajs.com)",
+  "author": "",
   "description": "Medusa B2B Starter Storefront",
   "keywords": [
     "medusa-storefront",
