--- a/backend/package.json
+++ b/backend/package.json
@@ -30,10 +30,13 @@
     "@mikro-orm/knex": "6.4.3",
     "@mikro-orm/migrations": "6.4.3",
     "@mikro-orm/postgresql": "6.4.3",
+    "@react-email/components": "0.0.33",
     "awilix": "^8.0.1",
     "jwt-decode": "^4.0.0",
     "medusa-b2b-starter": "file:",
+    "medusa-plugin-auth": "^1.11.1",
     "pg": "^8.13.0",
+    "resend": "^4.1.2",
     "zod": "3.22.4"
   },
   "devDependencies": {
