feat(file storage): alter local storage by Supabase storage and update environment variables

--- a/storefront/.env.template
+++ b/storefront/.env.template
@@ -20,3 +20,5 @@ NEXT_PUBLIC_PAYPAL_CLIENT_ID=test
 GOOGLE_CLIENT_ID=test-hash.apps.googleusercontent.com
 
 GOOGLE_CLIENT_SECRET=GOCSPX-test-hash
+
+SUPABASE_UNIQUE_ID=kugdjdoerfulnqkuqkeieibhnde
