--- a/storefront/.env.template
+++ b/storefront/.env.template
@@ -1,24 +1,21 @@
-# Your Medusa backend, should be updated to where you are hosting your server. Remember to update CORS settings for your server. See – https://docs.medusajs.com/usage/configurations#admin_cors-and-store_cors
-NEXT_PUBLIC_MEDUSA_BACKEND_URL=http://localhost:9000
-
+# Note: Comment unused variables
 # Your publishable key that can be attached to sales channels. See - https://docs.medusajs.com/development/publishable-api-keys
 NEXT_PUBLIC_MEDUSA_PUBLISHABLE_KEY=pk_test
+# Your preferred default region. When middleware cannot determine the user region from the "x-vercel-country" header, the default region will be used. ISO-2 lowercase format. 
+NEXT_PUBLIC_DEFAULT_REGION=us
+# Your Next.js revalidation secret. See – https://nextjs.org/docs/app/building-your-application/data-fetching/fetching-caching-and-revalidating#on-demand-revalidation
+REVALIDATE_SECRET=supersecret
+NEXT_PUBLIC_STRIPE_KEY=pk_test
+GOOGLE_CLIENT_ID=test-hash.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=GOCSPX-test-hash
+SUPABASE_UNIQUE_ID=kugdjdoerfulnqkuqkeieibhnde
 
+# FOR DEV
+# Your Medusa backend, should be updated to where you are hosting your server. Remember to update CORS settings for your server. See – https://docs.medusajs.com/usage/configurations#admin_cors-and-store_cors
+NEXT_PUBLIC_MEDUSA_BACKEND_URL=http://localhost:9000
 # Your store URL, should be updated to where you are hosting your storefront.
 NEXT_PUBLIC_BASE_URL=http://localhost:8000
 
-# Your preferred default region. When middleware cannot determine the user region from the "x-vercel-country" header, the default region will be used. ISO-2 lowercase format. 
-NEXT_PUBLIC_DEFAULT_REGION=us
-
-# Your Next.js revalidation secret. See – https://nextjs.org/docs/app/building-your-application/data-fetching/fetching-caching-and-revalidating#on-demand-revalidation
-REVALIDATE_SECRET=supersecret
-
-NEXT_PUBLIC_STRIPE_KEY=pk_test
-
-NEXT_PUBLIC_PAYPAL_CLIENT_ID=test
-
-GOOGLE_CLIENT_ID=test-hash.apps.googleusercontent.com
-
-GOOGLE_CLIENT_SECRET=GOCSPX-test-hash
-
-SUPABASE_UNIQUE_ID=kugdjdoerfulnqkuqkeieibhnde
+# FOR PROD
+# NEXT_PUBLIC_BASE_URL=https://c931kfsr-8000.asse.devtunnels.ms
+# NEXT_PUBLIC_MEDUSA_BACKEND_URL=https://c931kfsr-9000.asse.devtunnels.ms
