--- a/backend/package.json
+++ b/backend/package.json
@@ -40,8 +40,12 @@
     "zod": "3.22.4"
   },
   "devDependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@medusajs/icons": "^2.1.3",
     "@medusajs/test-utils": "2.4.0",
     "@mikro-orm/cli": "6.4.3",
+    "@mui/material": "^6.1.2",
     "@swc/core": "1.5.7",
     "@swc/jest": "^0.2.36",
     "@types/jest": "^29.5.13",
@@ -49,9 +53,12 @@
     "@types/react": "^18.3.2",
     "@types/react-dom": "^18.2.25",
     "jest": "^29.7.0",
+    "pdfkit": "^0.15.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.53.0",
+    "recharts": "^2.13.3",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.2",
     "vite": "^5.2.11",
