--- a/backend/package.json
+++ b/backend/package.json
@@ -14,14 +14,17 @@
   ],
   "scripts": {
     "build": "medusa build",
-    "seed": "medusa exec ./src/scripts/business-seed.ts",
+    "seed-business": "medusa exec ./src/scripts/business-seed.ts",
+    "seed-AI": "medusa exec ./src/scripts/ai-seed.ts",
     "start": "medusa start",
+    "debug-amateurishly": "medusa exec ./src/scripts/temp.ts",
     "dev": "medusa develop",
     "test:integration:http": "TEST_TYPE=integration:http NODE_OPTIONS=--experimental-vm-modules jest --silent=false --runInBand --forceExit",
     "test:integration:modules": "TEST_TYPE=integration:modules NODE_OPTIONS=--experimental-vm-modules jest --silent --runInBand --forceExit",
     "test:unit": "TEST_TYPE=unit NODE_OPTIONS=--experimental-vm-modules jest --silent --runInBand --forceExit"
   },
   "dependencies": {
+    "@genkit-ai/googleai": "^1.10.0",
     "@medusajs/admin-sdk": "2.4.0",
     "@medusajs/cli": "2.4.0",
     "@medusajs/framework": "2.4.0",
@@ -32,6 +35,7 @@
     "@mikro-orm/postgresql": "6.4.3",
     "@react-email/components": "0.0.33",
     "awilix": "^8.0.1",
+    "genkit": "^1.10.0",
     "jwt-decode": "^4.0.0",
     "medusa-b2b-starter": "file:",
     "medusa-plugin-auth": "^1.11.1",
